added plant
